--- a/libft/Makefile
+++ b/libft/Makefile
@@ -46,6 +46,7 @@ SRCS = ft_memset.c		\
 	   ft_putendl_fd.c	\
 	   ft_putnbr_fd.c   \
 	   get_next_line.c  \
+	   	get_next_line_2.c  \
 	   get_next_line_utils.c  \
 
 
